--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.1.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
     "ionic2-calendar": "^0.5.2",
+    "leaflet": "^1.5.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
