--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@capacitor/core": "1.1.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.12.0",
+    "@ionic-native/http": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-advanced-http": "^2.1.1",
+    "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
     "ionic2-calendar": "^0.5.2",
     "leaflet": "^1.5.1",
@@ -77,7 +81,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "android"
