--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "^2.1.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-sqlite-storage": "3.3.0",
     "core-js": "^2.5.4",
     "ionic2-calendar": "^0.5.2",
     "leaflet": "^1.5.1",
@@ -85,7 +86,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
