--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.1.1",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/geolocation": "^5.12.0",
+    "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/http": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +31,7 @@
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "^2.1.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "4.0.2",
     "cordova-sqlite-storage": "3.3.0",
     "core-js": "^2.5.4",
     "ionic2-calendar": "^0.5.2",
@@ -87,7 +88,8 @@
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
       },
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android"
